--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - ROCKET_ADDRESS=0.0.0.0
       - LOG_LEVEL=WARN
     ports:
-      - 8080:80
+      - "8080:80"
 
   caddy:
     container_name: caddy
@@ -26,3 +26,45 @@ services:
     ports:
       - "443:443"
       - "80:80"
+    depends_on:
+      - vaultwarden
+
+  promtail:
+    container_name: promtail
+    image: "grafana/promtail@sha256:086e4e85d2eb383fb04ea83c0f5074da81df56e415062ca888dba426abd8dfa5" # promtail 3.5 - linux/arm/v7
+    restart: "always"
+    volumes:
+      - "/var/log:/var/log:ro"
+      - "/var/lib/docker/containers:/var/lib/docker/containers:ro"
+      - "./promtail/promtail-config.yml:/etc/promtail/config.yml"
+      - "./promtail-positions/:/var/lib/promtail"
+    command: "--config.file=/etc/promtail/config.yml"
+
+  loki:
+    container_name: loki
+    image: "grafana/loki@sha256:0eaee7bf39cc83aaef46914fb58f287d4f4c4be6ec96b86c2ed55719a75e49c8" # loki 3.5 - linux/arm/v7
+    restart: "always"
+    volumes:
+      - "./loki-data:/loki"
+      - "./loki/local-config.yaml:/etc/loki/local-config.yaml"
+    ports:
+      - "3100:3100"
+
+  prometheus:
+    container_name: prometheus
+    image: "prom/prometheus@sha256:23031bfe0e74a13004252caaa74eccd0d62b6c6e7a04711d5b8bf5b7e113adc7" # prometheus 3.7.2 - linux/arm/v7
+    restart: "always"
+    volumes:
+      - "./prometheus-data:/prometheus"
+      - "./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+    ports:
+      - "9090:9090"
+
+  grafana:
+    container_name: grafana
+    image: "grafana/grafana@sha256:b882588a1b66697f1e444e798b15ecd810aba8ce430f98a3a4feecbab561a6b8" # grafana 12.3.0-18925857539 - linux/arm/v7
+    restart: "always"
+    volumes:
+      - "./grafana-data:/var/lib/grafana"
+    ports:
+      - "3000:3000"
