--- a/autobackup.sh.example
+++ b/autobackup.sh.example
@@ -17,9 +17,9 @@ tar -czf "${ZIPFILE}" -C "${BASE_DIR}" vw-data
 ${BIN}/docker unpause vaultwarden > /dev/null
 
 if ${BIN}/aws s3 cp "${ZIPFILE}" "${S3_BUCKET}" --profile backup-manager > /dev/null; then
-    ${BIN}/aws sns publish --topic-arn ${SNS_TOPIC} --message "Backup Success: ${ZIPFILE} at $(date)"
+    ${BIN}/aws sns publish --topic-arn ${SNS_TOPIC} --message "Backup Success: ${ZIPFILE} at $(date)" --profile backup-manager
 else
-    ${BIN}/aws sns publish --topic-arn ${SNS_TOPIC} --message "Backup Failed: ${ZIPFILE} at $(date)"
+    ${BIN}/aws sns publish --topic-arn ${SNS_TOPIC} --message "Backup Failed: ${ZIPFILE} at $(date)" --profile backup-manager
     exit 1
 fi
 
