--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -12,9 +12,10 @@ scrape_configs:
     static_configs:
       - targets:
           - "host.docker.internal:9100"
-  - job_name: "cadvisor"
-    static_configs:
-      - targets: ["host.docker.internal:8080"]
+  # not setup yet
+  # - job_name: "cadvisor"
+  #   static_configs:
+  #     - targets: []
   - job_name: "loki"
     metrics_path: "/metrics"
     static_configs:
